kubernetes/app1-taskmanager/backend-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app1-backend
  namespace: app1
spec:
  selector:
    app: app1-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
