kubernetes/app1-taskmanager/frontend-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app1-frontend
  namespace: app1
spec:
  selector:
    app: app1-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
