kubernetes/app1-taskmanager/ingress-api.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-api-ingress
  namespace: app1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: app1-frontend
            port:
              number: 80
